feat: main + javafx + some communication IDK at this point